# fllc-qlearning-scheduler

./: .gitignore  README.md  pyproject.toml  requirements.txt
QtCreator-FLLC-Scheduler/: main_window.py
QtDesignFLLC/: Qt-Design-FLLC.qmlproject.qtds  QtDesignFLLC.qmlproject  QtDesignFLLC.qmlproject.qtds  qmlmodules
QtDesignFLLC/content/: App.qml
QtDesignFLLC/src/: import_qml_plugins.h
exports/: q_table.csv
exports/aggregate_stats/: aggregate_statistics_Benchmarks.csv
exports/schedule_evaluation/: evaluation_results.csv
exports/training_schedules_output/: schedule_episode_1.csv
fllc_scheduler/: __main__.py  config.py  data.py  schedule_config.py  schedule_data.py  schedule_evaluator.py  time_data.py
fllc_scheduler/data_model/: data.py  schedule_config.py  schedule_data.py  schedule_evaluator.py  settings.py  time_data.py
fllc_scheduler/q_learning/: q_config.py  q_data.py  q_learning.py  q_metrics.py  q_state.py  q_strategy.py
fllc_scheduler/ui/: gui.py  gui_refresh_inputs.py  helpers.py  input_panel.py  mpl_widgets.py  q_learning_inputs.py  schedule_data_inputs.py  schedule_display.py  soft_constraint_inputs.py  time_data_inputs.py  training_thread.py
fllc_scheduler/utils/: config.py  export_utils.py  stat_utils.py  time_utils.py
src/: config.py  data_to_csv.py  descriptive_stats.py  gui_signals.py  main.py  q_learning.py  schedule_data.py  schedule_evaluator.py  start_time_generator.py  table.py  team.py  time_data.py  time_slot_creator.py  tournament_data.py  training_thread.py  utilities_qlearning.py  utilities_time.csv  utilities_time.py
(+27 files in other folders)
